Wed Jul  8 16:47:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_basename): returns new string instead of
	  shared string from FilePathStringValue().  [ruby-core:24199]

2009-07-07  Eric Hodel  <drbrain@segment7.net>

	* ext/.document:  Update with extensions that appear to have
	  documentation.  [ruby-core:24181]

Tue Jul  7 10:12:37 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_ext_int_to_encs): Set external encoding if
	  ext==intern. [ruby-dev:38278]

Mon Jul  6 08:00:10 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (enum_to_a): should propagate taint to the return value.
	  [ruby-core:24152]

	* enum.c (enum_sort_by): ditto.

Mon Jul  6 09:31:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (make_curry_proc): should propagate lambda-ness.
	  [ruby-core:24127]

Sun Jul  5 14:04:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_threadptr_exec_event_hooks): new function to
	  execute event hooks, with preserving errinfo.  [ruby-core:24118]

Sun Jul  5 08:08:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_yield_setup_block_args): restores the firs
	  arg where is overwritten at funcall.  [ruby-core:24139]

Fri Jul  3 19:48:40 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: undef-ed shome methods.  [ruby-core:24110]

	* complex.c (Numeric#arg): NaN for NaN.  [ruby-core:24116]

Thu Jul  2 07:53:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fixed wrong variable.

Tue Jun 30 18:19:07 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_hash): documentation fix.  a patch from
	  Marc-Andre Lafortune.  [ruby-core:23943]

	* object.c (rb_mod_cmp): ditto.

	* range.c (range_eq): ditto.

	* string.c (rb_str_partition, rb_str_rpartition): ditto.

	* struct.c (rb_struct_s_def): ditto.

Wed Jul  1 08:46:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_encoding): encodings need extra depth.
	  [ruby-core:24100]
